1.9.3 - 2018-XX-XX


1.9.2 - 2018-07-18

  1. Report the UGI user in FileStatus instead of process owner.

  2. Implement automatic fadvise (adaptive range reads). In this mode, connector
     starts to send bounded range requests instead of streaming range requests
     when reading non gzip encoded files after first backward read or forward
     read for more than `fs.gs.inputstream.inplace.seek.limit` bytes was
     detected.

     To activate this behavior set the property:

       fs.gs.inputstream.fadvise=AUTO (default: SEQUENTIAL)

  3. Add an option to prefetch footer when creating
     `GoogleCloudStorageReadChannel` in `AUTO` and `RANDOM` fadvise mode.
     Prefetch size is configured via property:

       fs.gs.inputstream.footer.prefetch.size (default: 0)

     This optimization is helpful when reading objects in format that stores
     metadata at the end of the file in footer, like Parquet and ORC.

     Note: for this optimization to work, specified footer prefetch size should
     be greater or equal to an actual metadata size stored in the file footer.

     To disable footer pre-fetching set this property to 0.

  4. Cache objects metadata in `PerformanceCachingGoogleCloudStorage` using GCS
     `ListObjects` requests.

  5. Change default values of properties:

       fs.gs.inputstream.min.range.request.size (default: 1048576 -> 524288)
       fs.gs.performance.cache.max.entry.age.ms (default: 3000 -> 5000)
       fs.gs.performance.cache.list.caching.enable (default: true -> false)

  6. Change default OAuth 2.0 token server URL to
     `https://oauth2.googleapis.com/token`.

     Default OAuth 2.0 token server URL could be changed via environment
     variable:

       GOOGLE_OAUTH_TOKEN_SERVER_URL


1.9.1 - 2018-07-11

  1. Fix `PerformanceCachingGoogleCloudStorage`.

  2. Send only 1 GCS metadata request per `GoogleCloudStorageReadChannel`
     object lifecycle to reduce number of GCS requests when reading objects.
